<resources>
    <string name="app_name">SalvadorTech</string>
    <string name="title_cadastro">Cadastro</string>
    <string name="label_nome">Nome</string>
    <string name="hint_nome">Digite seu nome completo</string>
    <string name="label_email">Email</string>
    <string name="hint_email">Digite seu email</string>
    <string name="label_cpf">CPF</string>
    <string name="hint_cpf">Digite seu CPF</string>
    <string name="label_senha">Senha</string>
    <string name="hint_senha">Digite sua senha</string>
    <string name="label_repetir_senha">Repetir Senha</string>
    <string name="hint_repetir_senha">Repita sua senha</string>
    <string name="button_cadastrar">Cadastrar</string>
    <string name="next">Próximo</string>
    <string name="previous">Anterior</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet</string>
    <string name="action_settings">Configurações</string>
    <string name="first_fragment_label">Primeiro Fragmento</string>
    <string name="second_fragment_label">Segundo Fragmento</string>
    <!-- Adicione estas strings -->
    <string name="menu_bottom">Menu Bottom</string>
    <string name="home_bottom">Home Bottom</string>
    <string name="help_bottom">Help Bottom</string>
    <string name="inicio">Início</string>

    <string name="observacao"><b>Observação do técnico:</b> Máquina muito suja, provavelmente a causa do problema seja poeira nos slots de memória.</string>
    <string name="pecas"><b>Peças adicionadas ou substituidas:</b> Nenhuma peça foi adicionada a sua manutenção.</string>

    <string name="your_web_client_id">655805994337-v1fb80t8t6qeq9sge302u8fhtta0p2uf.apps.googleusercontent.com</string>

    <string-array name="status_options">
        <item>Em espera</item>
        <item>Em andamento</item>
        <item>Finalizado</item>
    </string-array>

</resources>
