<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/title_salvador_tech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_cadastro"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_marginBottom="32dp"/>

    <TextView
        android:id="@+id/label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/label_nome"
        android:textSize="12sp"
        />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nome"
        android:background="@drawable/rounded_edit_text"
        android:padding="16dp"
        android:minHeight="48dp"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/label_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_email"
        android:layout_marginTop="16dp"
        android:textSize="12sp"/>

    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:background="@drawable/rounded_edit_text"
        android:padding="16dp"
        android:minHeight="48dp"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/label_cpf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_cpf"
        android:layout_marginTop="16dp"
        android:textSize="12sp"/>

    <EditText
        android:id="@+id/input_cpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_cpf"
        android:background="@drawable/rounded_edit_text"
        android:padding="16dp"
        android:minHeight="48dp"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/label_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_senha"
        android:layout_marginTop="16dp"
        android:textSize="12sp"/>

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_senha"
        android:inputType="textPassword"
        android:background="@drawable/rounded_edit_text"
        android:padding="16dp"
        android:minHeight="48dp"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/label_repeat_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_repetir_senha"
        android:layout_marginTop="16dp"
        android:textSize="12sp"/>

    <EditText
        android:id="@+id/input_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_repetir_senha"
        android:inputType="textPassword"
        android:background="@drawable/rounded_edit_text"
        android:padding="16dp"
        android:minHeight="48dp"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_cadastrar"
        android:layout_marginTop="24dp"
        android:textSize="12sp"/>

</LinearLayout>