<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <RelativeLayout
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:padding="16dp"
            android:background="@color/black">

            <ImageView
                android:id="@+id/menu_icon"
                android:layout_width="33dp"
                android:layout_height="31dp"
                android:layout_alignParentStart="true"
                android:contentDescription="Menu Icon"
                android:src="@drawable/menu_hamburguer" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="Detalhamento"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/user_icon"
                android:layout_width="41dp"
                android:layout_height="31dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="-3dp"
                android:contentDescription="User Icon"
                android:src="@drawable/perfil" />
        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/top_bar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:id="@+id/id_servico"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="Serviço: 1321234"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/nome_cliente"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="Nome:"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/descricao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="Descricao: Computador não quer dar video"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="Status: Em andamento"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/observacao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal"
                        android:text="@string/observacao" />

                    <TextView
                        android:id="@+id/pecas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal"
                        android:text="@string/pecas"/>






                </LinearLayout>


            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:background="@color/black"
            android:padding="8dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/menu_bottom"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/historico"
                android:contentDescription="@string/menu_bottom"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/home_bottom"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/home"
                android:contentDescription="Home Bottom"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/help_bottom"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ajuda"
                android:contentDescription="Help Bottom"
                android:layout_weight="1" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/nav_view"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:background="@color/colorBackground">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#000"
            android:hint="Do que você precisa?"
            android:drawableStart="@drawable/search"
            android:drawablePadding="8dp"
            android:textColor="#000"
            android:padding="8dp"
            android:background="@drawable/rounded_edittext" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Perfil"
            android:padding="16dp" />

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>